force-app/main/default/objects/FEC_MDM_Stage_Change__c/FEC_MDM_Stage_Change__c.object-meta.xml
<CustomObject>
    <description>MDM clone of FEC_Stage_Change__c - stores synced Stage Change routing rules</description>
    <label>FEC MDM Stage Change</label>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>SC-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>FEC MDM Stage Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>