force-app/main/default/objects/FEC_MDM_Stage_Change__c/fields/FEC_Condition_Requirement__c.field-meta.xml
<CustomField>
    <fullName>FEC_Condition_Requirement__c</fullName>
    <label>Condition Requirement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>