force-app/main/default/objects/FEC_MDM_Stage_Change__c/fields/FEC_Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Next_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Stage</label>
    <referenceTo>FEC_MDM_Case_Stage__c</referenceTo>
    <relationshipLabel>Stage Changes (Next Stage)</relationshipLabel>
    <relationshipName>Next_Stage_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>