force-app/main/default/objects/FEC_MDM_Stage_Change__c/fields/FEC_Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Previous_Stage__c</fullName>
    <label>Previous Stage</label>
    <referenceTo>FEC_MDM_Case_Stage__c</referenceTo>
    <relationshipLabel>Stage Changes (Previous Stage)</relationshipLabel>
    <relationshipName>Previous_Stage_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>