force-app/main/default/objects/FEC_MDM_Stage_Change__c/fields/FEC_Priority__c.field-meta.xml
<CustomField>
    <fullName>FEC_Priority__c</fullName>
    <description>Priority of this Stage Change rule. Lower number = higher priority. Rules are evaluated in ascending priority order; the first matching rule is applied.</description>
    <label>Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>